2007-11-14  Aidan Kehoe  <kehoea@parhasard.net>

	* subr.el (string-to-sequence):
	* subr.el (string-to-list):
	* subr.el (string-to-vector):
	(append STRING nil) is faster than (mapcar #'identity STRING),
	(vconcat STRING) is faster than (mapcar #'identity STRING). Change
	from GNU. 

2007-11-14  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (write-region):
	Provide a new arg, CODING-SYSTEM-OR-MUSTBENEW, for compatibility
	both with GNU (where it has the MUSTBENEW meaning) and earlier
	XEmacs code (where it has the CODING-SYSTEM meaning). 
	* files.el:
	* files.el (normal-backup-enable-predicate):
	* files.el (auto-save-file-name-transforms):
	Correct the docstrings of #'normal-backup-enable-predicate,
	#'auto-save-file-name-transforms.
	* files.el (make-temp-file): New.
	Merge from GNU. 
	* subr.el:
	Document that #'make-temp-name is now in files.el. 

2007-11-08  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-edit.el (custom-save-all):
	Merge Jason Spiro's fix of 
	c241693f0710021645g642f145n5925c7a35e7b2c58@mail.gmail.com , to
	avoid corruption of the custom-set-variables and custom-set-fonts
	calls in ~/.emacs if XEmacs doesn't understand any part of the
	syntax of ~/.emacs . 

2007-10-31  Mike Sperber  <mike@xemacs.org>

	* autoload.el (make-autoload): Add `defclass' and `defmethod' as
	defmacro-like operators.  This is need to enable compilation of
	packages that depend on eieio.

2007-10-26  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/general-late.el:
	Now that all the dumped coding systems are available, decode
	Installation-string using the value for
	Installation-file-coding-system at dump time. 

2007-10-26  Aidan Kehoe  <kehoea@parhasard.net>

	* dumped-lisp.el (preloaded-file-list):
	Allow version.el to be compiled. 
	* help.el (describe-installation):
	Use and-boundp instead of (and (boundp ...); don't decode
	Installation-string. Call #'error with a DATUM arg. 
	* loadup.el:
	* loadup.el (Installation-string): Removed.
	Moved to version.el.